upgrade Travis Build

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,21 @@ before_install:
 rvm:
   - 2.0.0
   - 2.1.2
+  - 2.1.10
+  - 2.2.5
+  - 2.3.1
+
+env:
+  - RAILS_VERSION="~> 2.3"
+  - RAILS_VERSION="~> 3.0"
+  - RAILS_VERSION="~> 4.0"
+  - RAILS_VERSION="~> 5.0"
+
+matrix:
+  exclude:
+    - rvm: 2.0.0
+      env: RAILS_VERSION="~> 5.0"
+    - rvm: 2.1.2
+      env: RAILS_VERSION="~> 5.0"
+    - rvm: 2.1.10
+      env: RAILS_VERSION="~> 5.0"
